syntax = "proto3";
package it.valeriovaudi.account.model;

option java_multiple_files = true;
option java_package = "it.valeriovaudi.account.model";

message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse {
  string message = 1;
}

service AccountsService {

  rpc Login (LoginRequest) returns (LoginResponse) {}
}